--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,7 +187,7 @@ h6 {
   color: #343a40;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 950px) {
   .get-started-btn {
     padding: 7px 20px 8px 20px;
     margin-right: 15px;
@@ -316,6 +316,8 @@ h6 {
   color: #fff;
   font-size: 28px;
   cursor: pointer;
+  background: none;
+  border: none;
   display: none;
   line-height: 0;
   transition: 0.5s;
