--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,6 +173,7 @@ h6 {
 --------------------------------------------------------------*/
 .get-started-btn {
   color: #fff;
+  
   border-radius: 4px;
   padding: 7px 25px 8px 25px;
   white-space: nowrap;
@@ -317,6 +318,7 @@ h6 {
   font-size: 28px;
   cursor: pointer;
   background: none;
+  margin-left: -20px;
   border: none;
   display: none;
   line-height: 0;
