--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,7 @@ h6 {
 
 
 #header-band {
-  height: 5px;
+  height: 15px;
   width: 100%;
   position: absolute;
   top: 0;
@@ -173,12 +173,12 @@ h6 {
 --------------------------------------------------------------*/
 .get-started-btn {
   color: #fff;
-  
+  margin-right: 100px;
   border-radius: 4px;
   padding: 7px 25px 8px 25px;
   white-space: nowrap;
   transition: 0.3s;
-  font-size: 14px;
+  font-size: 16px;
   display: inline-block;
   border: 2px solid #ffc451;
 }
@@ -188,11 +188,12 @@ h6 {
   color: #343a40;
 }
 
+
 @media (max-width: 950px) {
-  .get-started-btn {
-    padding: 7px 20px 8px 20px;
-    margin-right: 15px;
-  }
+    .get-started-btn {
+      padding: 7px 20px 8px 20px;
+      margin-right: 15px;
+    }
 }
 
 /*--------------------------------------------------------------
@@ -318,7 +319,7 @@ h6 {
   font-size: 28px;
   cursor: pointer;
   background: none;
-  margin-left: -20px;
+  margin-left: -5px;
   border: none;
   display: none;
   line-height: 0;
@@ -1010,7 +1011,7 @@ section {
 }
 
 .counts .image {
-  background: url("../img/counts-img.jpg") center center no-repeat;
+  background: url("/demo4.avif") center center no-repeat;
   background-size: cover;
   min-height: 400px;
 }
